--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,7 @@
   {% include language.html %}
   {% include interests.html %}
   {% include technologies.html %}
+  {% include portofolios.html %}
 
   {% if sidebar.about %}
     {% include about.html %}
